Add the doctype to the top of the test file
Doh! this was forcing IE8/9 into quirks mode which was
the reason this wasn't working.

--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Bindable Tests</title>
+    <meta content='Mode Set' name='author'>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+    <meta content='yes' name='apple-mobile-web-app-capable'>
+    <meta content='black' name='apple-mobile-web-app-status-bar-style'>
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
   </head>
   <body>
@@ -18,3 +23,4 @@
     </script>
   </body>
 </html>
+
